--- a/src/hypotenuse.html
+++ b/src/hypotenuse.html
@@ -21,6 +21,6 @@
         <div id="output-hypo"></div>
     </div>
     
-    <script src="/app.js" type="text/javascript"></script>
+    <script src="/hypo.js" type="text/javascript"></script>
 </body>
 </html>
