--- a/src/area.html
+++ b/src/area.html
@@ -14,11 +14,12 @@
     </h2>
     <div class="container">
         <form class="form">
-            <label for="calculateArea1"><input type="radio" id="calculateArea1">1.) If base and height of triangle is known</label>
-            <label for="calculateArea2"><input type="radio" id="calculateArea2">2.) If length of all 3 sides of a triangle is known</label>
-            <label for="calculateArea3"><input type="radio" id="calculateArea3">3.) If length of two sides of triangle and angle including them are known</label>
-            <label for="calculateArea4"><input type="radio" id="calculateArea4">1.) If triangle is an equilateral triangle</label>
+            <label for="calculateArea1"><input type="radio" class="calculateArea">1.) If base and height of triangle is known</label>
+            <label for="calculateArea2"><input type="radio" class="calculateArea">2.) If length of all 3 sides of a triangle is known</label>
+            <label for="calculateArea3"><input type="radio" class="calculateArea">3.) If length of two sides of triangle and angle including them are known</label>
+            <label for="calculateArea4"><input type="radio" class="calculateArea">1.) If triangle is an equilateral triangle</label>
         </form> 
+
 
 
     </div>
