--- a/src/html/angles.html
+++ b/src/html/angles.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Angles of Triangle?</title>
-    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="/src/css/main.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <a href="/index.html">Go Back</a>
+    <a href="index.html">Go Back</a>
     <h1>Enter the angles in below input boxes and we will tell you if those angles make a Triangle</h1>
 
     <div class="container">
@@ -23,7 +23,7 @@
         <button class="check">submit</button>
         <div id="output"></div>
     </div>
-    <script src="/app.js" type="text/javascript"></script>
+    <script src="/src/javascript/isTriangle.js" type="text/javascript"></script>
     
 </body>
 
