--- a/src/html/hypotenuse.html
+++ b/src/html/hypotenuse.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Check Hypotenuse</title>
-    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="/src/css/main.css">
 </head>
 <body>
-    <a href="/index.html">Go Back</a>
+    <a href="index.html">Go Back</a>
     <h1>Enter the lengths of sides of right angle triangle</h1>
     <div class="container">
 
@@ -21,6 +21,6 @@
         <div id="output-hypo"></div>
     </div>
     
-    <script src="/hypo.js" type="text/javascript"></script>
+    <script src="/src/javascript/hypo.js" type="text/javascript"></script>
 </body>
 </html>
