--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,19 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fun with triangles</title>
-    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="/src/css/main.css">
 </head>
 <body>
     <h1>Fun With triangles</h1>
     <div class="container">
         <div class="block">
-            <a href="src/angles.html">Angles of Triangle</a>
-            <a href="src/hypotenuse.html">Check Hypotenuse</a>
+            <a href="angles.html">Angles of Triangle</a>
+            <a href="hypotenuse.html">Check Hypotenuse</a>
         </div>  
 
         <div class="block">
-            <a href="src/area.html">Calculate Area</a>
-            <a href="src/quiz.html">Take a quiz</a>
+            <a href="area.html">Calculate Area</a>
+            <a href="quiz.html">Take a quiz</a>
         </div>  
     </div>
 </body>
