--- a/src/html/area.html
+++ b/src/html/area.html
@@ -21,11 +21,25 @@
         </form> 
 
         <div class="calculateAreaBlock">
-                <label for="">Enter base<input type="number" class="input-option1">
+                <label for="input-option1">base =<input type="number" class="input-option1">
 
-                </label><label for="">Enter height<input type="number" class="input-option2"></label>
+                </label><label for="input-option2">height =<input type="number" class="input-option2"></label>
+
+                <button id="area-btn1">submit</button>
+                
+                <div class="show-area">1/2*base*height</div>
         </div>
-        <div class="calculateAreaBlock"></div>
+        <div class="calculateAreaBlock">
+            <label for="" class="label">side1 = 
+                <input type="number" class="input-option1">
+            </label>
+            <label for="input-option2" class="label"> side2 =  
+                <input type="number" class="input-option2">
+            </label>
+            <button id="area-btn2">submit</button>
+
+            <div class="show-area">√s*(s-a)*(s-b)*(s-c)</div>
+        </div>
         <div class="calculateAreaBlock"></div>
         <div class="calculateAreaBlock"></div>
 
