Area portion done

--- a/src/html/area.html
+++ b/src/html/area.html
@@ -23,25 +23,46 @@
         <div class="calculateAreaBlock">
                 <label for="input-option1">base =<input type="number" class="input-option1">
 
-                </label><label for="input-option2">height =<input type="number" class="input-option2"></label>
+                </label><label for="input-option1">height =<input type="number" class="input-option1"></label>
 
                 <button id="area-btn1">submit</button>
                 
                 <div class="show-area">1/2*base*height</div>
         </div>
         <div class="calculateAreaBlock">
-            <label for="" class="label">side1 = 
-                <input type="number" class="input-option1">
+            <label for="input-option2" class="label">side1 = 
+                <input type="number" class="input-option2">
             </label>
             <label for="input-option2" class="label"> side2 =  
+                <input type="number" class="input-option2">
+            </label>
+            <label for="input-option2" class="label"> side3 =  
                 <input type="number" class="input-option2">
             </label>
             <button id="area-btn2">submit</button>
 
             <div class="show-area">√s*(s-a)*(s-b)*(s-c)</div>
         </div>
-        <div class="calculateAreaBlock"></div>
-        <div class="calculateAreaBlock"></div>
+
+        <div class="calculateAreaBlock">
+            <label for="input-option3" class="label"> side1 = 
+                <input type="number" class="input-option3">
+            </label>
+            <label for="input-option3" class="label"> side2 = 
+                <input type="number" class="input-option3">
+            </label>
+            <label for="input-option3" class="label"> included Angle = <input type="number" class="input-option3" min="0" max="180" required></label>
+            <button id="area-btn3">submit</button>
+
+            <div class="show-area">1/2*a*b*sin A</div>
+        </div>
+
+        <div class="calculateAreaBlock">
+            <label for="input-option4" class="label">a= <input type="number" class="input-option4"></label>
+            <button id="area-btn4">submit</button>
+            <div class="show-area">√3/4*(a)²</div>
+
+        </div>
 
 
 
