--- a/src/html/quiz.html
+++ b/src/html/quiz.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <a href="/src/html/index.html">Go Back</a>
+    <a href="/index.html">Go Back</a>
 
     <h1>Triangle quiz</h1>
     <h2>If you want to take part in geometery quiz. You are at right place.</h2>
