--- a/src/html/angles.html
+++ b/src/html/angles.html
@@ -6,22 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Angles of Triangle?</title>
     <link rel="stylesheet" href="/src/css/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <a href="index.html">Go Back</a>
-    <h1>Enter the angles in below input boxes and we will tell you if those angles make a Triangle</h1>
-
     <div class="container">
-        <label for="input-angle1" class="label">Enter 1st Angle:</label>
-        <input id ="input-angle1" type="number" min="1" max="180" required>
-        <label for="input-angle2" class="label">Enter 2nd Angle:</label>
-        <input id="input-angle2" type="number" min="1" max="180" required>
-        <label for="input-angle3" class="label">Enter 3rd Angle:</label>
-        <input id="input-angle3" type="number" min="1" max="180" required>
+        <section class="section">   
+            <a href="/"><i class="fas fa-home fa-5x"></i></a>
+            <h1>Enter the angles in below input boxes and we will tell you if those angles make a Triangle</h1>
 
-        <button class="check">submit</button>
-        <div id="output"></div>
+        
+            <label for="input-angle1" class="label">Enter 1st Angle:</label>
+            <input id ="input-angle1" type="number" min="1" max="180" required>
+            <label for="input-angle2" class="label">Enter 2nd Angle:</label>
+            <input id="input-angle2" type="number" min="1" max="180" required>
+            <label for="input-angle3" class="label">Enter 3rd Angle:</label>
+            <input id="input-angle3" type="number" min="1" max="180" required>
+
+            <button class="check">submit</button>
+            <div id="output"></div>
+        </section>
     </div>
     <script src="/src/javascript/isTriangle.js" type="text/javascript"></script>
     
