--- a/src/html/area.html
+++ b/src/html/area.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/src/css/main.css">
 </head>
 <body>
-    <a href="index.html">Go back</a>
+    <a href="/index.html">Go back</a>
     <h1>Calculate Area</h1>
     <h2>Select an option below as per the data you have for a triangle
     </h2>
