--- a/src/html/hypotenuse.html
+++ b/src/html/hypotenuse.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/src/css/main.css">
 </head>
 <body>
-    <a href="index.html">Go Back</a>
+    <a href="/index.html">Go Back</a>
     <h1>Enter the lengths of sides of right angle triangle</h1>
     <div class="container">
 
