--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <div class="container">
     <div>
-        <h1>Fun With triangles</h1>
+        <h1>Welcome to Fun With triangles</h1>
         <div class="class-container">
             <div class="block">
                 <a href="src/html/angles.html" class="choice">Angles of Triangle</a>
