--- a/src/html/area.html
+++ b/src/html/area.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculate Area</title>
     <link rel="stylesheet" href="/src/css/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 </head>
 <body>
-    <a href="/index.html">Go back</a>
+    <a href="/index.html"><i class="fas fa-home fa-5x"></i></a>
     <h1>Calculate Area</h1>
     <h2>Select an option below as per the data you have for a triangle
     </h2>
