--- a/src/html/angles.html
+++ b/src/html/angles.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <section class="section">   
-            <a href="/"><i class="fas fa-home fa-5x"></i></a>
+            <a href="/index.html"><i class="fas fa-home fa-5x"></i></a>
             <h1>Enter the angles in below input boxes and we will tell you if those angles make a Triangle</h1>
 
         
