--- a/src/html/hypotenuse.html
+++ b/src/html/hypotenuse.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Check Hypotenuse</title>
     <link rel="stylesheet" href="/src/css/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 </head>
 <body>
-    <a href="/index.html">Go Back</a>
+    <a href="/index.html"><i class="fas fa-home fa-5x"></i></a>
     <h1>Enter the lengths of sides of right angle triangle</h1>
     <div class="container">
 
