--- a/src/html/area.html
+++ b/src/html/area.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 </head>
 <body>
-    <div class="container">
+    <div style="color: crimson;" class="container">
         <section class="section">
 
-            <a href="/index.html"><i class="fas fa-home fa-5x"></i></a>
+            <a href="/index.html"><i class="fas fa-home fa-5x" style="color: crimson;"></i></a>
             <h1>Calculate Area</h1>
-            <h2>Select an option below as per the data you have for a triangle
+            <h2 style="color: crimson;">Select an option below as per the data you have for a triangle
             </h2>
             
                 <form class="form">
@@ -37,7 +37,7 @@
 
                         </label><label for="input-option1">height =<input type="number" class="input-option1"></label>
 
-                        <button id="area-btn1">submit</button>
+                        <button id="area-btn1" style="color: crimson; border-color: crimson;">submit</button>
                         
                         <div class="show-area">The area of triangle is 1/2*base*height</div>
                 </div>
@@ -51,7 +51,7 @@
                     <label for="input-option2" class="label"> side3 =  
                         <input type="number" class="input-option2">
                     </label>
-                    <button id="area-btn2">submit</button>
+                    <button id="area-btn2" style="color: crimson; border-color: crimson;">submit</button>
 
                     <div class="show-area"> The area of triangle is √s*(s-a)*(s-b)*(s-c)</div>
                 </div>
@@ -64,14 +64,14 @@
                         <input type="number" class="input-option3">
                     </label>
                     <label for="input-option3" class="label"> included Angle = <input type="number" class="input-option3" min="0" max="180" required></label>
-                    <button id="area-btn3">submit</button>
+                    <button id="area-btn3" style="color: crimson; border-color: crimson;">submit</button>
 
                     <div class="show-area">The area formula is 1/2*a*b*sin A</div>
                 </div>
 
                 <div class="calculateAreaBlock">
                     <label for="input-option4" class="label">a= <input type="number" class="input-option4"></label>
-                    <button id="area-btn4">submit</button>
+                    <button id="area-btn4" style="color: crimson; border-color: crimson;">submit</button>
                     <div class="show-area">Area of Equilateral triangle is √3/4*(a)²</div>
 
                 </div>
