css syling done

--- a/src/html/angles.html
+++ b/src/html/angles.html
@@ -10,6 +10,15 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
+    <nav class="navigation">
+        <a href="/index.html"><i class="fas fa-home fa-2x"></i></a>
+
+        <ul class="list-no-bullet nav-top">
+            <li class="list-item-inline"><a href="/src/html/hypotenuse.html">hypotenuse</a></li>
+            <li class="list-item-inline"><a href="/src/html/area.html">Area</a></li>
+            <li class="list-item-inline"><a href="/src/html/quiz.html">quiz</a></li>
+        </ul>
+    </nav>
     <div class="container">
         <section class="section">   
             <a href="/index.html"><i class="fas fa-home fa-5x"></i></a>
@@ -27,6 +36,14 @@
             <div id="output"></div>
         </section>
     </div>
+    <footer class="footer">
+        <ul class="list-no-bullet footer-bottom">
+            <li><a href="https://github.com/anurag-kkumarr"><i class="fab fa-github-square fa-2x"></i></a></li>
+            <li><a href="https://twitter.com/anuragcode"><i class="fab fa-twitter-square fa-2x"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/anuragkkumarr/"><i class="fab fa-linkedin fa-2x"></i></a></li>
+            <li><a href="https://anuragcode.netlify.app/"><i class="fas fa-box-tissue fa-2x"></i></a></li>
+        </ul>
+    </footer>
     <script src="/src/javascript/isTriangle.js" type="text/javascript"></script>
     
 </body>
