--- a/src/html/area.html
+++ b/src/html/area.html
@@ -9,6 +9,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 </head>
 <body>
+    <nav class="navigation">
+        <a href="/index.html"><i class="fas fa-home fa-2x"></i></a>
+
+        <ul class="list-no-bullet nav-top">
+            <li class="list-item-inline"><a href="/src/html/hypotenuse.html">hypotenuse</a></li>
+            <li class="list-item-inline"><a href="/src/html/angles.html">Angle</a></li>
+            <li class="list-item-inline"><a href="/src/html/quiz.html">quiz</a></li>
+        </ul>
+    </nav>
     <div style="color: crimson;" class="container">
         <section class="section">
 
@@ -79,6 +88,14 @@
             </section>
 
     </div>
+    <footer class="footer">
+        <ul class="list-no-bullet footer-bottom">
+            <li><a href="https://github.com/anurag-kkumarr"><i class="fab fa-github-square fa-2x"></i></a></li>
+            <li><a href="https://twitter.com/anuragcode"><i class="fab fa-twitter-square fa-2x"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/anuragkkumarr/"><i class="fab fa-linkedin fa-2x"></i></a></li>
+            <li><a href="https://anuragcode.netlify.app/"><i class="fas fa-box-tissue fa-2x"></i></a></li>
+        </ul>
+    </footer>
     
     <script src="/src/javascript/calcArea.js"></script>
 </body>
