--- a/index.html
+++ b/index.html
@@ -1,28 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fun with triangles</title>
     <link rel="stylesheet" href="/src/css/main.css">
-</head>
-<body>
-<div class="container">
-    <div>
-        <h1>Welcome to Fun With triangles</h1>
-        <div class="class-container">
-            <div class="block">
-                <a href="src/html/angles.html" class="choice">Angles of Triangle</a>
-                <a href="src/html/hypotenuse.html" class="choice">Check Hypotenuse</a>
-            </div>  
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+        integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-            <div class="block">
-                <a href="src/html/area.html" class="choice">Calculate Area</a>
-                <a href="src/html/quiz.html" class="choice">Take a quiz</a>
-            </div>  
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+</head>
+
+<body>
+    <nav class="navigation">
+        <a href="/index.html"><i class="fas fa-home fa-2x"></i></a>
+    </nav>
+    <div class="container">
+        <div>
+            <h1 >Welcome to Fun With triangles</h1>
+            <div class="class-container">
+                <div class="block">
+                    <a href="src/html/angles.html" class="choice">Angles of Triangle</a>
+                    <a href="src/html/hypotenuse.html" class="choice">Check Hypotenuse</a>
+                </div>
+
+                <div class="block">
+                    <a href="src/html/area.html" class="choice">Calculate Area</a>
+                    <a href="src/html/quiz.html" class="choice">Take a quiz</a>
+                </div>
+            </div>
         </div>
     </div>
-</div>
+    <footer class="footer">
+        <ul class="list-no-bullet footer-bottom">
+            <li><a href="https://github.com/anurag-kkumarr"><i class="fab fa-github-square fa-2x"></i></a></li>
+            <li><a href="https://twitter.com/anuragcode"><i class="fab fa-twitter-square fa-2x"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/anuragkkumarr/"><i class="fab fa-linkedin fa-2x"></i></a></li>
+            <li><a href="https://anuragcode.netlify.app/"><i class="fas fa-box-tissue fa-2x"></i></a></li>
+        </ul>
+    </footer>
 </body>
+
 </html>
