--- a/src/html/hypotenuse.html
+++ b/src/html/hypotenuse.html
@@ -33,10 +33,10 @@
     </div>
     <footer class="footer">
         <ul class="list-no-bullet footer-bottom">
-            <li><a href="https://github.com/anurag-kkumarr"><i class="fab fa-github-square fa-2x"></i></a></li>
-            <li><a href="https://twitter.com/anuragcode"><i class="fab fa-twitter-square fa-2x"></i></a></li>
-            <li><a href="https://www.linkedin.com/in/anuragkkumarr/"><i class="fab fa-linkedin fa-2x"></i></a></li>
-            <li><a href="https://anuragcode.netlify.app/"><i class="fas fa-box-tissue fa-2x"></i></a></li>
+            <li><a href="https://github.com/anurag-kkumarr" target="_blank"><i class="fab fa-github-square fa-2x"></i></a></li>
+            <li><a href="https://twitter.com/anuragcode" target="_blank"><i class="fab fa-twitter-square fa-2x"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/anuragkkumarr/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></li>
+            <li><a href="https://anuragcode.netlify.app/" target="_blank"><i class="fas fa-box-tissue fa-2x"></i></a></li>
         </ul>
     </footer>
     
